<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pref_lay_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradiente_android"
    android:gravity="top"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/pref_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pref_button_bar" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                style="@style/OptionsGroupText"
                android:text="@string/pref_main" />

            <!-- Accion por Defecto -->

            <LinearLayout
                style="@style/OptionsLayoutGroup"
                android:onClick="clickAccionDefecto" >

                <LinearLayout
                    android:layout_width="44dip"
                    android:layout_height="wrap_content" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_def_action" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="3dip" >

                        <TextView
                            android:id="@+id/pref_accion_def1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/call"
                            android:textColor="@android:color/secondary_text_dark"
                            android:textSize="17dip"
                            android:textStyle="bold" >
                        </TextView>

                        <TextView
                            android:id="@+id/pref_accion_def2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sms"
                            android:textColor="@android:color/secondary_text_dark"
                            android:textSize="17dip"
                            android:textStyle="bold" >
                        </TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/SeparatorLane" />

            <!-- Preferencia Antes de llamar -->

            <LinearLayout style="@style/OptionsLayoutGroup" >

                <CheckBox
                    android:id="@+id/pref_check"
                    style="@style/OptionsCheckbox"
                    android:onClick="clickCheckBoxAfterCall" >
                </CheckBox>

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_ask" />

                    <TextView
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_ask_summary" />
                </LinearLayout>
            </LinearLayout>

            <!-- Preferencia tiempo en segundos antes de llamar -->

            <LinearLayout
                android:id="@+id/pref_lay_secs_after_call"
                style="@style/OptionsLayoutGroup"
                android:onClick="clickSecsAfterCall"
                android:padding="15dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingRight="2dip" >

                    <TextView
                        android:id="@+id/pref_text_seconds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="25dip"
                        android:textStyle="bold" >
                    </TextView>

                    <TextView
                        android:id="@+id/pref_text_secs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/secs"
                        android:textColor="@color/azul_claro"
                        android:textSize="20dip"
                        android:textStyle="bold" >
                    </TextView>
                </LinearLayout>

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        android:id="@+id/pref_text_seconds_large"
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_seconds" />

                    <TextView
                        android:id="@+id/pref_text_seconds_large2"
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_seconds_summary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/SeparatorLane" />

            <!-- Preferencia salir al terminar de llamar -->

            <LinearLayout style="@style/OptionsLayoutGroup" >

                <CheckBox
                    android:id="@+id/pref_check_exit_after_call"
                    style="@style/OptionsCheckbox" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_exit_after_call" />

                    <TextView
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_exit_after_call_summary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/SeparatorLane" />

            <!-- Notificacion -->

            <LinearLayout style="@style/OptionsLayoutGroup" >

                <CheckBox
                    android:id="@+id/pref_check_notification"
                    style="@style/OptionsCheckbox" 
                    android:onClick="clickNotification"/>

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_notification"
                        android:textColor="@android:color/primary_text_dark" />

                    <TextView
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_notification_summary"
                        android:textColor="@android:color/secondary_text_dark" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/SeparatorLane" />

            <!-- Abrir al inicio -->

            <LinearLayout 
                android:id="@+id/layout_open_start"
                style="@style/OptionsLayoutGroup" >

                <CheckBox
                    android:id="@+id/pref_check_open_start"
                    style="@style/OptionsCheckbox" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_open_start"
                        android:textColor="@android:color/primary_text_dark" />

                    <TextView
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_open_start_summary"
                        android:textColor="@android:color/secondary_text_dark" />
                </LinearLayout>
            </LinearLayout>


            <!-- Temas -->

            <TextView
                style="@style/OptionsGroupText"
                android:text="@string/themes" />

            <LinearLayout
                style="@style/OptionsLayoutGroup"
                android:onClick="clickThemes" >

                <LinearLayout
                    android:id="@+id/pref_lay_theme_withcolor"
                    android:layout_width="26dip"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="3dip"
                    android:layout_marginLeft="7dip"
                    android:layout_marginRight="7dip"
                    android:layout_marginTop="3dip"
                    android:orientation="vertical" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        android:id="@+id/pref_text_themes"
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_themes" />

                    <TextView
                        android:id="@+id/pref_text_themes2"
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_themes_summary" />
                </LinearLayout>
            </LinearLayout>

            <!-- Facebook -->

            <TextView
                style="@style/OptionsGroupText"
                android:text="Facebook" />

            <LinearLayout
                android:id="@+id/pref_lay_facebook"
                style="@style/OptionsLayoutGroup"
                android:onClick="clickFacebook" >

                <ImageView
                    android:layout_width="35dip"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:src="@drawable/facebook_icon" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        android:id="@+id/pref_facebook"
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/sharefacebook" />

                    <TextView
                        android:id="@+id/pref_text_facebook2"
                        style="@style/OptionsTextSummary"
                        android:text="@string/sharefacebook_sub" />
                </LinearLayout>
            </LinearLayout>

            <!-- ShortCut -->

            <TextView
                style="@style/OptionsGroupText"
                android:text="@string/shortcut" />

            <!-- Shortcut -->

            <LinearLayout
                android:id="@+id/pref_lay_shortcut"
                style="@style/OptionsLayoutGroup"
                android:onClick="clickShortcut" >

                <LinearLayout style="@style/OptionsLayoutEmpty" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        android:id="@+id/shortcut_title"
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/shortcut" />

                    <TextView
                        android:id="@+id/shortcut_summary"
                        style="@style/OptionsTextSummary"
                        android:text="@string/shortcut_summary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/SeparatorLane" />

            <!-- About -->

            <TextView
                style="@style/OptionsGroupText"
                android:text="About" />

            <!-- Novedades -->

            <LinearLayout
                style="@style/OptionsLayoutGroup"
                android:onClick="clickNovedades" >

                <LinearLayout style="@style/OptionsLayoutEmpty" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        android:id="@+id/pref_text_novedades"
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_novedades" />

                    <TextView
                        android:id="@+id/pref_text_novedades2"
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_novedades_summary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/SeparatorLane" />

            <!-- Contacta -->

            <LinearLayout
                style="@style/OptionsLayoutGroup"
                android:onClick="clickContact" >

                <LinearLayout style="@style/OptionsLayoutEmpty" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        android:id="@+id/pref_text_contacta"
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_contacta" />

                    <TextView
                        android:id="@+id/pref_text_contacta2"
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_contacta_summary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/SeparatorLane" />

            <!-- about us -->

            <LinearLayout
                style="@style/OptionsLayoutGroup"
                android:layout_marginBottom="5dip"
                android:onClick="clickAbout" >

                <LinearLayout style="@style/OptionsLayoutEmpty" />

                <LinearLayout style="@style/OptionsLayoutGroupText" >

                    <TextView
                        android:id="@+id/pref_text_about"
                        style="@style/OptionsTextPrincipal"
                        android:text="@string/pref_about" />

                    <TextView
                        android:id="@+id/pref_text_about2"
                        style="@style/OptionsTextSummary"
                        android:text="@string/pref_about_summary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/SeparatorLane" />

        </LinearLayout>
    </ScrollView>

    <!-- Botones de abajo guardar y volver -->

    <LinearLayout
        android:id="@+id/pref_button_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_header"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/pref_save_utton"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_menu_bar_left_bg"
                android:onClick="clickSave"
                android:padding="10dip"
                android:text="@string/button_save" />

            <Button
                android:id="@+id/pref_button_volver"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_menu_bar_right_bg"
                android:onClick="clickReturn"
                android:padding="10dip"
                android:text="@string/button_volver" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>