<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:gravity="top">
  
  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/dialog_bc_seriusly"
  		android:gravity="center"
  		android:textColor="@color/white"
  		android:textSize="20dip"
  		android:textStyle="bold"
  		android:layout_margin="5dip"></TextView>
  	<TextView
  		android:paddingTop="3dip"
  		android:id="@+id/dialog_text_contact"
  		android:gravity="center"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="contact"
  		android:textColor="@color/white"
  		android:textSize="24dip"
  		android:textStyle="bold"></TextView>
  	<LinearLayout
  	  android:layout_marginTop="15dip"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
	  android:orientation="vertical"
	  android:gravity="bottom">
	  
	  <ImageView
	  	android:src="@drawable/android_duda"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:layout_weight="1"
	  	android:paddingBottom="10dip"
	  	android:paddingTop="10dip"
	  	></ImageView>
	  
	  <Button
	  	android:id="@+id/dialog_button_yes"
	  	android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:text="@string/yes"
	    android:textSize="24dip"
  		android:textStyle="bold"
  		android:gravity="center"
  		android:layout_marginLeft="15dip"
  		android:layout_marginRight="15dip"></Button>
  		
  		  	<LinearLayout
  	  		  android:layout_width="fill_parent"
			  android:layout_height="wrap_content"
			  android:layout_weight="0.5"
			  android:orientation="horizontal"
			  android:gravity="left">
			  <CheckBox
			  	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			  	android:id="@+id/dialog_check"
			  	android:checked="false"
			  	></CheckBox>
			  <TextView
			  	android:layout_width="wrap_content"
  				android:layout_height="wrap_content"
  				android:text="@string/dialog_no_more"
  				android:textColor="@android:color/secondary_text_dark"
  				android:textSize="15dip"
  				android:layout_margin="5dip"></TextView>
	  
	  		</LinearLayout>
	  </LinearLayout>
  	
  
  
</LinearLayout>
