
    <RelativeLayout android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center|top">
    
    
  	<TextView
  		android:id="@+id/qieres"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/dialog_bc_seriusly"
  		android:gravity="center"
  		android:textColor="@color/white"
  		android:textSize="20dip"
  		android:textStyle="bold">
  	</TextView>
  	
  	<TextView
  		android:layout_below="@+id/qieres"
  		android:layout_alignLeft="@+id/qieres"
  		android:layout_alignRight="@+id/qieres"
  		android:id="@+id/dialog_text_contact"
  		android:gravity="center"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="contact"
  		android:textColor="@color/white"
  		android:textSize="24dip"
  		android:textStyle="bold">
  	</TextView>
  	
  	<ImageView
  		android:id="@+id/imagenrobot"
  		android:layout_below="@+id/dialog_text_contact"
  		android:layout_alignLeft="@+id/dialog_text_contact"
  		android:layout_alignRight="@+id/dialog_text_contact"
  		android:src="@drawable/android_duda"
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content">
  	</ImageView>
  	
  	<Button
  		android:layout_below="@+id/imagenrobot"
  		android:layout_alignLeft="@+id/imagenrobot"
  		android:layout_alignRight="@+id/imagenrobot"
  		android:id="@+id/dialog_button_yes"
	  	android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/yes"
	    android:textSize="24dip"
  		android:textStyle="bold"
  		android:gravity="center"
  		android:layout_marginLeft="15dip"
  		android:layout_marginRight="15dip">
  	</Button>
  	
  	<LinearLayout
  		android:layout_below="@+id/dialog_button_yes"
  		android:layout_height="wrap_content"
  		android:layout_width="wrap_content"
  		android:id="@+id/linearLayout1"
  		android:layout_alignLeft="@+id/dialog_button_yes"
  		android:layout_alignRight="@+id/dialog_button_yes">  		
  		
  			<CheckBox
			  	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			  	android:id="@+id/dialog_check"
			  	android:checked="false">
			</CheckBox>
			
			<TextView
			  	android:layout_width="wrap_content"
  				android:layout_height="wrap_content"
  				android:text="@string/dialog_no_more"
  				android:textColor="@android:color/secondary_text_dark"
  				android:textSize="15dip">
  			</TextView>
  		
  	</LinearLayout>
  	
  	
  	
  		
  		
        
    </RelativeLayout>
