<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ac.gestureCallPro.ui.cabecera.Cabecera
        android:id="@+id/gestures_cabecera"
        android:layout_width="fill_parent"
        android:layout_height="40dip" >
    </ac.gestureCallPro.ui.cabecera.Cabecera>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:background="@drawable/gradiente_android"
        android:cacheColorHint="#FF000000"
        android:divider="#a0a0a0"
        android:dividerHeight="3dip"
        android:fastScrollEnabled="true"
        android:scrollingCache="true" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:gravity="center"
        android:text="@string/gestures_loading"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_header"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dip"
            android:background="@drawable/menubar_shadow_downtoup" >
        </LinearLayout>

        <!--
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/info_list_gestos"
            android:textColor="@color/black"
            android:textStyle="bold" >
        </TextView>
        -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="5dip "
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="1dip" >

            <Button
                android:id="@+id/reloadButton"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_menu_bar_left_bg"
                android:onClick="reloadGestures"
                android:padding="10dip"
                android:text="@string/button_reload" />

            <Button
                android:id="@+id/gb_button_volver"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_menu_bar_right_bg"
                android:onClick="clickReturn"
                android:padding="10dip"
                android:text="@string/button_volver" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>